# wgpu-compute-benchmarks

./: Cargo.toml  LICENSE  README.md
benches/: sum_reduce.rs
derive-macro/: Cargo.toml
derive-macro/src/: lib.rs
src/: lib.rs
src/kernels/: block_sum_reduce_1.rs  block_sum_reduce_2.rs  block_sum_reduce_3.rs  block_sum_reduce_4.rs  block_sum_reduce_5.rs  block_sum_reduce_6.rs  block_sum_reduce_7.rs  dot.rs  elementwise_mul.rs  execution_step.rs  gpu_executor.rs  kernel1d.rs  mod.rs  sum_reduce.rs
src/math_utils/: mod.rs
src/shader_utils/: mod.rs
src/shaders/: block_sum_reduce.wgsl  block_sum_reduce_1.wgsl  block_sum_reduce_2.wgsl  block_sum_reduce_3.wgsl  block_sum_reduce_4.wgsl  block_sum_reduce_5.wgsl  block_sum_reduce_6.wgsl  block_sum_reduce_6_template.wgsl  block_sum_reduce_7.wgsl  block_sum_reduce_7_template.wgsl  elementwise_mul.wgsl  mod.rs  sum_reduce_final.wgsl
