workspace = { members = ["derive-macro"] }
[package]
name = "wgpu-compute-benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-macro = { path = "derive-macro" }
bytemuck = { version = "1.14.0", features = ["derive"] }
wgpu = "0.18.0"

[dev-dependencies]
futures-intrusive = "0.5.0"
pollster = "0.3.0"